tests/ui/error-codes/E0392.rs
enum Foo<T> { Bar } //~ ERROR E0392

fn main() {
}
